[package]
name = "glotaran_converter_lib"
version = "0.1.1"
edition = "2021"
author = "Eduardo Gonik" 
description = "A crate to convert DataStation TR Fluorescence to be used with Glotaran software"
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.2.2"
regex = "1.9.5"
