[package]
name = "glotaran_converter_lib"
version = "0.1.7"
edition = "2021"
repository = "https://github.com/egonik-unlp/glotaran_converter_lib"
homepage = "https://github.com/egonik-unlp/glotaran_converter_lib"
description = "A crate to convert DataStation TR Fluorescence to be used with Glotaran software"
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
csv = "1.2.2"
itertools = "0.14.0"
regex = "1.9.5"
